[tool.setuptools.packages.find]
include = ["pypedal*"]
# exclude = ["pypedal.tests*"]

[project]
name = 'pyd-pedal'
version = '0.0.2'
requires-python = '>=3.8'
dependencies = [
  'youtube-dl',
  'pedalboard',
  'requests',
  'pyperclip',
  'fastapi',
  'uvicorn[standard]',
  'colouredlogs',
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-asyncio',
]
dev = [
  'black',
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
