[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pypedal*"]
# exclude = ["pypedal.tests*"]

[project]
name = 'pyd-pedal'
version = '0.0.2'
requires-python = '>=3.8'
dependencies = [
  'youtube-dl',
  'pedalboard',
  'requests',
  'pyperclip',
  'fastapi',
  'uvicorn[standard]',
  'colouredlogs',
  'typer[all]',
  'pysndfx',
]

[project.scripts]
pypedal = "pypedal.pedal.equalizer:app"

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-asyncio',
]
dev = [
  'black',
  'PySoundFile',
  'tqdm',
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
